# tauri-plugin-store

./: Cargo.toml  DEPENDENTS.md  README.md  package.json
.github/: dependabot.yml
.github/workflows/: NPM.yml  Node.yml  Rust.yml
Source/: error.rs  lib.rs  store.rs
dist-js/: index.d.ts  index.min.js  index.min.js.map  index.mjs  index.mjs.map
examples/AppSettingsManager/: .gitignore  package.json  vite.config.ts
examples/AppSettingsManager/Documentation/: index.html  modules.html
examples/AppSettingsManager/Source/: main.ts
examples/AppSettingsManager/src-tauri/: Cargo.toml
examples/AppSettingsManager/src-tauri/Source/: main.rs
examples/AppSettingsManager/src-tauri/Source/app/: settings.rs
guest-js/: index.ts
