[dependencies]
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tauri = { workspace = true }
thiserror = { workspace = true }

[lib]
path = "Source/lib.rs"

[package]
authors = { workspace = true }
description = "Simple, persistent key-value store."
edition = { workspace = true }
license-file = { workspace = true }
name = "tauri-plugin-store"
rust-version = { workspace = true }
version = "0.0.0"
