[dependencies]
log = { version = "0.4.25" }
serde = { version = "1.0.217" }
serde_json = { version = "1.0.138" }
tauri = { version = "2.2.5" }
thiserror = { version = "2.0.11" }

[lib]
path = "Source/lib.rs"

[package]
authors = ["Tauri Programme within The Commons Conservancy"]
description = "Simple, persistent key-value store."
edition = "2024"
license-file = "LICENSE"
name = "tauri-plugin-store-read-only"
rust-version = "1.85.0"
version = "0.0.0"
