[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tauri = { workspace = true, features = ["shell-open"] }
tauri-plugin-store = { path = "../../../" }

[features]
custom-protocol = ["tauri/custom-protocol"]

[package]
authors = ["you"]
description = "A Tauri App"
edition = "2021"
license-file = "LICENSE"
name = "app_settings_manager"
repository = ""
version = "0.0.0"
