[build-dependencies]
tauri-build = { version = "2.0.5" }

[dependencies]
serde = { version = "1.0.217" }
serde_json = { version = "1.0.138" }
tauri = { version = "2.2.5", features = ["shell-open"] }
tauri-plugin-store = { version = "2.2.0" }

[features]
custom-protocol = ["tauri/custom-protocol"]

[package]
authors = ["you"]
description = "A Tauri App"
edition = "2024"
license-file = "LICENSE"
name = "tauri-plugin-store-app-settings-manager"
repository = ""
version = "0.0.0"

[[bin]]
name = "tauri-plugin-store-app-settings-manager"
path = "Source/main.rs"
